crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qt_gen__qt_gen_impl__tests__qobject_iface_tests__test.snap
---
source: crates/qt_gen/src/qt_gen_impl/tests/qobject_iface_tests.rs
expression: formatted
---
mod some_module {
    #[derive(Default)]
    struct SomeStruct {}
    impl SomeStruct {
        fn set_data(&mut self, index: &QModelIndex, value: &QVariant, role: i32) -> bool {
            false
        }
        fn data(&self, index: &QModelIndex, role: i32) -> QVariant {}
        fn row_count(&self, parent: &QModelIndex) -> i32 {
            1
        }
    }
    impl Drop for SomeStruct {
        fn drop(&mut self) {
            <Self as qtbridge::qtbridge_runtime::QObjectHolder>::detach_qobject(self);
        }
    }
    impl qtbridge::qtbridge_runtime::QMetaInfo for SomeStruct {
        fn register_meta(
            mut meta_obj: std::pin::Pin<&mut qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder>,
        ) {
            meta_obj.as_mut().end_meta_registration();
        }
        fn get_shared_dynamic_meta_object(
        ) -> &'static qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder {
            use std::sync::OnceLock;
            thread_local! { static DYNAMIC_META_OBJECT : OnceLock < & 'static qtbridge :: qtbridge_runtime :: DynamicMetaObjectBuilder > = OnceLock :: new () ; }
            DYNAMIC_META_OBJECT.with(|cell| {
                *cell.get_or_init(|| {
                    let ptr = Self::create_dynamic_meta_object_builder_for_type();
                    unsafe { ptr.as_ref() }.unwrap()
                })
            })
        }
    }
    impl qtbridge::qt_type_lib::QMetaTypeGet for SomeStruct {
        fn get_qmetatype() -> qtbridge::qt_type_lib::QMetaType {
            use std::sync::OnceLock;
            static META_TYPE_INTERFACE: OnceLock<qtbridge::qt_type_lib::QMetaTypeInterface> =
                OnceLock::new();
            let iface = META_TYPE_INTERFACE.get_or_init(
                qtbridge::qtbridge_runtime::qmetatypeforqobject::init_interface_for::<Self>,
            );
            qtbridge::qt_type_lib::QMetaType::new_with_interface(iface as *const _)
        }
    }
    impl qtbridge::qtbridge_runtime::QmlRegister for SomeStruct {
        const URI: &str = "qt_gen";
        const ELEMENT_NAME: &str = "SomeStruct";
        const MINOR_VERSION: u8 = 1u8;
        const MAJOR_VERSION: u8 = 0u8;
        const IS_SINGLETON: bool = false;
    }
    impl qtbridge::qtbridge_runtime::QObjectHolder for SomeStruct {
        type ProxyRust = qtbridge::qt_ifaces::qabstract_list_model::QAbstractListModelProxyRust;        fn as_adaptor_trait (rust_obj_rc : std :: rc :: Rc < std :: cell :: RefCell < Self > >) -> std :: rc :: Rc < std :: cell :: RefCell < < Self :: ProxyRust as qtbridge :: qtbridge_runtime :: qrustproxy :: QRustProxy > :: AdapterType > >{
            rust_obj_rc
        }
    }
}
